Finished setting up specialties as seperate refinery sections to DRY code out and reduce reliance on added HTML in database. Fixed bug of 3px wide gaps between sections by changing grid rows to be block instead of inline-block. We will see if this causes problems down the line.

--- a/app/assets/stylesheets/_grid.css.sass
+++ b/app/assets/stylesheets/_grid.css.sass
@@ -9,14 +9,14 @@
   $untrimmed            : $number_columns * $raw_column
   $trimmed              : $untrimmed - $gutter_percent
 
-  width                 : $trimmed * (99.8% / $row)
+  width                 : $trimmed * (100% / $row)
   margin:
     left                : $gutter-percent
     top                 : $gutter-percent / 2
     bottom              : $gutter-percent / 2
 
 @mixin row($margin_percent: 0%, $gutter_percent: 5%)
-  display               : inline-block
+  display               : block
   box-sizing            : border-box
   -webkit-box-sizing    : border-box
   -moz-box-sizing       : border-box
