--- a/app/assets/stylesheets/_margins.css.sass
+++ b/app/assets/stylesheets/_margins.css.sass
@@ -2,3 +2,8 @@ $m      : 3% //margin for small screens
 $g      : 5% //gutter for small screens
 $ml     : 10% //margin for large screens
 $gl     : 5% //gutter for large screens
+
+%box
+  box-sizing            : border-box
+  -webkit-box-sizing    : border-box
+  -moz-box-sizing       : border-box
