--- a/app/assets/stylesheets/_strategy.css.sass
+++ b/app/assets/stylesheets/_strategy.css.sass
@@ -1,2 +1,80 @@
+@import "colors"
+@import "margins"
+@import "grid"
+
+$im     : 35% //icon margin
+$breakI : 645px //breakpoint for moving icons
+$w      : (100% - 2 * $m - 2 * $g) / 3  //width of content within div
+
+
+
 #strategy
   @extend %hard
+  @extend %box
+  position              : relative
+  @media (max-width     : $breakI - 1px)
+    &:before
+      content           : ''
+      position          : absolute
+      width             : 75px
+      height            : 75px
+      margin:
+        left            : $m 
+        top             : $g / 2
+      background:
+        image           : url("sprite2.png")
+        repeat          : no-repeat
+        size            : 300% 200%
+        position        : left top
+  @media (min-width     : $breakI)
+    @include col(3, 1, 0, 0)
+    padding:
+      left              : $m
+  h1
+    color               : $gold
+    font:
+      size              : 17px
+      size              : 1.7rem
+      weight            : 300
+    text:
+      transform         : uppercase
+    @media (min-width   : $breakI)
+      color             : $soft
+  p
+    color               : $soft
+    font:
+      size              : 14px
+      size              : 1.4rem
+      weight            : 300
+  .inner
+    display             : inline-block
+    width               : 100% - $im - $m
+    margin:
+      top               : $g / 2
+      left              : $im
+    &:hover
+      h1
+        color           : $gold
+        text-shadow     : 0 0 1.0rem rgba($gold, .20), 0.2rem 0.2rem 0.2rem rgba($gold, 0.1), -0.2rem -0.2rem 0.2rem rgba($gold, 0.1)
+    @media (min-width   : $breakI)
+      width             : 100% - ($m + $g / 2) * 3
+      margin:
+        top             : 0
+        left            : 0
+      &:before
+        content         : ''
+        margin:
+          left          : auto
+          right         : auto
+        display         : block
+        width           : 150px
+        height          : 150px
+        background:
+          image         : url("sprite2.png")
+          repeat        : no-repeat
+          size          : 300% 200%
+          position      : left bottom
+      &:hover
+        &:before
+          background:
+            position    : left top
