--- a/app/assets/stylesheets/_tagline.css.sass
+++ b/app/assets/stylesheets/_tagline.css.sass
@@ -17,17 +17,14 @@ $breakH : 945px //min-size trigger for 2nd layout change to match header
 
 #tagline
   @include row($m, $g)
-  margin:
-    top           : -3px
-  height          : $break1
-  position        : relative
+  height          : 250px
   background: 
     image         : url("buildings.png"), url("background_invert.png")
     repeat        : no-repeat, repeat
-    position      : top center, top left
-    size          : 100% 85%, auto auto
+    position      : bottom center, top left
+    size          : 100% 75%, auto auto
   @media (min-width: $break1)
-    height        : $break3
+    height        : 380px
   @media (min-width: $break5)
     height        : inherit
     $w            : (100% - (2 * $m) - $g) / 2
@@ -43,8 +40,6 @@ $breakH : 945px //min-size trigger for 2nd layout change to match header
   h1
     @extend h1
     @include col(1, 1, $m, $g)
-    position        : absolute
-    bottom          : 0
     color: $blue
     color: rgba($blue, 0)
     text-shadow: 0 0 1px rgba(lighten($blue, 10%), 0.5), 0 0 0 rgba(darken($blue, 10%), 0.9)
